--- a/A/Aguada/Aguada.html
+++ b/A/Aguada/Aguada.html
@@ -11,7 +11,7 @@
   <h1 class="Titulo"> Lugares turísticos en Aguada </h1>
   <div class= "Lugares">
     <h2>Central Coloso</h2>
-    <img src="55584467.jpg" height="30%" width="80%">
+    <img src="2.jpg" height="30%" width="80%">
  <br> <p class="text">
    Comenzó como La Hacienda Caño Las Nasas en el 1830. Se convirtió en la segunda central azucarera establecida en Puerto Rico en 1875.
     <br>Mientras fue propiedad de los Hnos. Vadi el azúcar y el ron producido les produjo buenos precios por su calidad. Fue comprada por los franceses en 1904 y finalmente vendida a la familia Bianchi.
