--- a/A/Aguada/Aguada.html
+++ b/A/Aguada/Aguada.html
@@ -37,7 +37,7 @@ Aguada, PR, 00602</a></li>
       </ul>
     </p>
  <h2> Playa Cañones </h2>
-    <img src="canones-2agram-copy_orig.jpg" height="30%" width="80%">
+    <img src="3.jpg" height="30%" width="80%">
   <p class="text">
     <br>En Playa Cañones, es posible econtrar heroglíficos de los taínos, la civilización antigua de Puerto Rico. 
 <br>Esta hermosa playa de arena negra contiene mucha historia que contar. En ella podemos encontrar las ruinas de antiguos cañones militares que aun se pelean por prevalecer en pie.
