--- a/A/Aguada/Aguada.html
+++ b/A/Aguada/Aguada.html
@@ -26,7 +26,7 @@ Aguada, PR, 00602</a></li>
       </ul>
     </p>
   <h2>Pirámide de Aguada </h2>
-    <img src="IMG_8178.jpg" height="30%" width="80%">
+    <img src="4.jpg" height="30%" width="80%">
   <p class="text">
     <br>Fue comisionada por Nelson Ruíz, esta pirámide fue construida en el 2009 por el arquitecto Emiliano Matos y honora las civilizaciones pre-colombianas.
   </p>
