--- a/A/Aguada/Aguada.html
+++ b/A/Aguada/Aguada.html
@@ -11,7 +11,7 @@
   <h1 class="Titulo"> Lugares turísticos en Aguada </h1>
   <div class= "Lugares">
     <h2>Central Coloso</h2>
-    <img src="2.jpg" height="30%" width="80%">
+    <img src="2.jpeg" height="30%" width="80%">
  <br> <p class="text">
    Comenzó como La Hacienda Caño Las Nasas en el 1830. Se convirtió en la segunda central azucarera establecida en Puerto Rico en 1875.
     <br>Mientras fue propiedad de los Hnos. Vadi el azúcar y el ron producido les produjo buenos precios por su calidad. Fue comprada por los franceses en 1904 y finalmente vendida a la familia Bianchi.
@@ -26,7 +26,7 @@ Aguada, PR, 00602</a></li>
       </ul>
     </p>
   <h2>Pirámide de Aguada </h2>
-    <img src="4.jpg" height="30%" width="80%">
+    <img src="4.jpeg" height="30%" width="80%">
   <p class="text">
     <br>Fue comisionada por Nelson Ruíz, esta pirámide fue construida en el 2009 por el arquitecto Emiliano Matos y honora las civilizaciones pre-colombianas.
   </p>
@@ -37,7 +37,7 @@ Aguada, PR, 00602</a></li>
       </ul>
     </p>
  <h2> Playa Cañones </h2>
-    <img src="3.jpg" height="30%" width="80%">
+    <img src="3.jpeg" height="30%" width="80%">
   <p class="text">
     <br>En Playa Cañones, es posible econtrar heroglíficos de los taínos, la civilización antigua de Puerto Rico. 
 <br>Esta hermosa playa de arena negra contiene mucha historia que contar. En ella podemos encontrar las ruinas de antiguos cañones militares que aun se pelean por prevalecer en pie.
