--- a/index.html
+++ b/index.html
@@ -24,21 +24,21 @@
 <li><a href= "A/Aibonito/Aibonito.html"> Aibonito</a></li>
 <li><a href= "A/Arecibo/Arecibo.html"> Arecibo</a></li>
 <li><a href= "A/Arroyo/Arroyo.html"> Arroyo</a></li>
-<li><a href= "A/Añasco/Añasco.html"> Añasco</a></li>
+<li><a href= "A/Anasco/Anasco.html"> Añasco</a></li>
 <li><a href= "B/Barceloneta/Barceloneta.html"> Barceloneta</a></li>
 <li><a href= "B/Barranquitas/Barranquitas.html"> Barranquitas</a></li>
-<li><a href= "B/Bayamón/Bayamón.html"> Bayamón</a></li>
+<li><a href= "B/Bayamon/Bayamon.html"> Bayamón</a></li>
 <li><a href= "C/CaboRojo/CaboRojo.html"> Cabo Rojo</a></li>
 <li><a href= "C/Caguas/Caguas.html"> Caguas</a></li>
 <li><a href= "C/Camuy/Camuy.html"> Camuy</a></li>
-<li><a href= "C/Canóvanas/Canóvanas.html"> Canóvanas</a></li>
+<li><a href= "C/Canovanas/Canovanas.html"> Canóvanas</a></li>
 <li><a href= "C/Carolina/Carolina.html"> Carolina</a></li>
-<li><a href= "C/Cataño/Cataño.html"> Cataño</a></li>
+<li><a href= "C/Catano/Catano.html"> Cataño</a></li>
 <li><a href= "C/Cayey/Cayey.html"> Cayey</a></li>
 <li><a href= "C/Ceiba/Ceiba.html"> Ceiba</a></li>
 <li><a href= "C/Ciales/Ciales.html"> Ciales</a></li>
 <li><a href= "C/Coamo/Coamo.html"> Coamo</a></li>
-<li><a href= "C/Comerío/Comerío.html"> Comerío</a></li>
+<li><a href= "C/Comerio/Comerio.html"> Comerío</a></li>
 <li><a href= "C/Corozal/Corozal.html"> Corozal</a></li>
 <li><a href= "C/Culebra/Culebra.html"> Culebra</a></li>
 <li><a href= "D/Dorado/Dorado.html"> Dorado</a></li>
@@ -48,41 +48,41 @@
 <li><a href= "G/Guayanilla/Guayanilla.html"> Guayanilla</a></li>
 <li><a href= "G/Guaynabo/Guaynabo.html"> Guaynabo</a></li>
 <li><a href= "G/Gurabo/Gurabo.html"> Gurabo</a></li>
-<li><a href= "G/Guánica/Guánica.html"> Guánica</a></li>
+<li><a href= "G/Guanica/Guanica.html"> Guánica</a></li>
 <li><a href= "H/Hatillo/Hatillo.html"> Hatillo</a></li>
 <li><a href= "H/Hormigueros/Hormigueros.html"> Hormigueros</a></li>
 <li><a href= "H/Humacao/Humacao.html"> Humacao</a></li>
 <li><a href= "I/Isabela/Isabela.html"> Isabela</a></li>
 <li><a href= "J/Jayuya/Jayuya.html"> Jayuya</a></li>
-<li><a href= "J/JuanaDíaz/JuanaDíaz.html"> Juana Díaz</a></li>
+<li><a href= "J/JuanaDiaz/JuanaDiaz.html"> Juana Díaz</a></li>
 <li><a href= "J/Juncos/Juncos.html"> Juncos</a></li>
 <li><a href= "L/Lajas/Lajas.html"> Lajas</a></li>
 <li><a href= "L/Lares/Lares.html"> Lares</a></li>
-<li><a href= "L/LasMarías/LasMarías.html"> Las Marías</a></li>
+<li><a href= "L/LasMarias/LasMarias.html"> Las Marías</a></li>
 <li><a href= "L/LasPiedras/LasPiedras.html"> Las Piedras</a></li>
 <li><a href= "L/Loiza/Loiza.html"> Loiza</a></li>
 <li><a href= "L/Luquillo/Luquillo.html"> Luquillo</a></li>
-<li><a href= "M/Manatí/Manatí.html"> Manatí</a></li>
+<li><a href= "M/Manati/Manati.html"> Manatí</a></li>
 <li><a href= "M/Maricao/Maricao.html"> Maricao</a></li>
 <li><a href= "M/Maunabo/Maunabo.html"> Maunabo</a></li>
-<li><a href= "M/Mayagüez/Mayagüez.html"> Mayagüez</a></li>
+<li><a href= "M/Mayaguez/Mayaguez.html"> Mayagüez</a></li>
 <li><a href= "M/Moca/Moca.html"> Moca</a></li>
 <li><a href= "M/Morovis/Morovis.html"> Morovis</a></li>
 <li><a href= "N/Naguabo/Naguabo.html"> Naguabo</a></li>
 <li><a href= "N/Naranjito/Naranjito.html"> Naranjito</a></li>
 <li><a href= "O/Orocovis/Orocovis.html"> Orocovis</a></li>
 <li><a href= "P/Patillas/Patillas.html"> Patillas</a></li>
-<li><a href= "P/Peñuelas/Peñuelas.html"> Peñuelas</a></li>
+<li><a href= "P/Penuelas/Penuelas.html"> Peñuelas</a></li>
 <li><a href= "P/Ponce/Ponce.html"> Ponce</a></li>
 <li><a href= "Q/Quebradillas/Quebradillas.html"> Quebradillas</a></li>
-<li><a href= "R/Rincón/Rincón.html"> Rincón</a></li>
+<li><a href= "R/Rincon/Rincon.html"> Rincón</a></li>
 <li><a href= "R/RioGrande/RioGrande.html"> Rio Grande</a></li>
 <li><a href= "S/SabanaGrande/SabanaGrande.html"> Sabana Grande</a></li>
 <li><a href= "S/Salinas/Salinas.html"> Salinas</a></li>
-<li><a href= "S/SanGermán/SanGermán.html"> San Germán</a></li>
+<li><a href= "S/SanGerman/SanGerman.html"> San Germán</a></li>
 <li><a href= "S/SanJuan/SanJuan.html"> San Juan</a></li>
 <li><a href= "S/SanLorenzo/SanLorenzo.html"> San Lorenzo</a></li>
-<li><a href= "S/SanSebastián/SanSebastián.html"> San Sebastián</a></li>
+<li><a href= "S/SanSebastian/SanSebastian.html"> San Sebastián</a></li>
 <li><a href= "S/SantaIsabel/SantaIsabel.html"> Santa Isabel</a></li>
 <li><a href= "T/ToaAlta/ToaAlta.html"> Toa Alta</a></li>
 <li><a href= "T/ToaBaja/ToaBaja.html"> Toa Baja</a></li>
