--- a/A/Anasco/Anasco.html
+++ b/A/Anasco/Anasco.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width">
   <title>Pobreza en Puerto Rico</title>
-  <link href="Añasco.css" rel="stylesheet" type="text/css" />
+  <link href="Anasco.css" rel="stylesheet" type="text/css" />
 </head>
 <body>
   <div class="Titulo">
@@ -37,7 +37,7 @@
       </ul>
     </p>
     <h2>Parque Nacional Tres Hermanos</h2>
-    <img src="AÑASCO-Parque Nacional Tres Hermanos^IMG_7341-BIG.jpg" width="80%" height="30%">
+    <img src="Parque Nacional Tres Hermanos^IMG_7341-BIG.jpg" width="80%" height="30%">
     <p class="text">
       Playa Tres Hermanos “Parque Nacional Tres Hermanos” se encuentra en el Noroeste de Puerto Rico en el pueblo de Añasco y es un balneario administrado por la Compañía de Parques Nacionales de Puerto Rico.
 <br>
