--- a/B/Bayamon/Bayamon.html
+++ b/B/Bayamon/Bayamon.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width">
   <title>Pobreza en Puerto Rico</title>
-  <link href="Bayamón.css" rel="stylesheet" type="text/css" />
+  <link href="Bayamon.css" rel="stylesheet" type="text/css" />
 </head>
 <body>
 <div class="Titulo">
