--- a/C/Canovanas/Canovanas.html
+++ b/C/Canovanas/Canovanas.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width">
   <title>Pobreza en Puerto Rico</title>
-  <link href="Canóvanas.css" rel="stylesheet" type="text/css" />
+  <link href="Canovanas.css" rel="stylesheet" type="text/css" />
 </head>
 <body>
 <div class="Titulo">
