--- a/C/Catano/Catano.html
+++ b/C/Catano/Catano.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width">
   <title>Pobreza en Puerto Rico</title>
-  <link href="Cataño.css" rel="stylesheet" type="text/css" />
+  <link href="Catano.css" rel="stylesheet" type="text/css" />
 <body>
 <div class="Titulo">
   <h2>Lugares turísticos en Cataño </h2>
