--- a/G/Guanica/Guanica.html
+++ b/G/Guanica/Guanica.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width">
   <title>Pobreza en Puerto Rico</title>
-  <link href="Guánica.css" rel="stylesheet" type="text/css" />
+  <link href="Guanica.css" rel="stylesheet" type="text/css" />
 </head>
 <body>
 <div class="Titulo">
