--- a/L/LasMarias/LasMarias.html
+++ b/L/LasMarias/LasMarias.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width">
   <title>Turismo en Puerto Rico</title>
-  <link href="LasMarías.css" rel="stylesheet" type="text/css"/>
+  <link href="LasMarias.css" rel="stylesheet" type="text/css"/>
 </head>
 <body>
 <div class="Titulo">
