--- a/P/Penuelas/Penuelas.html
+++ b/P/Penuelas/Penuelas.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width">
   <title>Pobreza en Puerto Rico</title>
-  <link href="P/Peñuelas/Peñuelas.css" rel="stylesheet" type="text/css" />
+  <link href="Penuelas.css" rel="stylesheet" type="text/css" />
 </head>
 <body>
 <div class="Titulo">
