--- a/M/Maunabo/Maunabo.html
+++ b/M/Maunabo/Maunabo.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width">
   <title>Pobreza en Puerto Rico</title>
-  <link href="M/Maunabo/Maunabo.css" rel="stylesheet" type="text/css" />
+  <link href="Maunabo.css" rel="stylesheet" type="text/css" />
 </head>
 <body>
 <div class="Titulo">
