--- a/M/Mayaguez/Mayaguez.html
+++ b/M/Mayaguez/Mayaguez.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width">
   <title>Pobreza en Puerto Rico</title>
-  <link href="M/Mayagüez/Mayagüez.css" rel="stylesheet" type="text/css" />
+  <link href="Mayaguez.css" rel="stylesheet" type="text/css" />
 </head>
 <body>
 <div class="Titulo">
