--- a/Q/Quebradillas/Quebradillas.html
+++ b/Q/Quebradillas/Quebradillas.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width">
   <title>Pobreza en Puerto Rico</title>
-  <link href="Q/Quebradillas/Quebradillas.css" rel="stylesheet" type="text/css" />
+  <link href="Quebradillas.css" rel="stylesheet" type="text/css" />
 </head>
 <body>
 <div class="Titulo">
