--- a/R/Rincon/Rincon.html
+++ b/R/Rincon/Rincon.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width">
   <title>Pobreza en Puerto Rico</title>
-  <link href="R/Rincón/Rincón.css" rel="stylesheet" type="text/css" />
+  <link href="Rincon.css" rel="stylesheet" type="text/css" />
 </head>
 <body>
 <div class="Titulo">
