--- a/R/RioGrande/RioGrande.html
+++ b/R/RioGrande/RioGrande.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width">
   <title>Pobreza en Puerto Rico</title>
-  <link href="R/RioGrande/RioGrande.css" rel="stylesheet" type="text/css" />
+  <link href="RioGrande.css" rel="stylesheet" type="text/css" />
 </head>
 <body>
 <div class="Titulo">
