--- a/S/SabanaGrande/SabanaGrande.html
+++ b/S/SabanaGrande/SabanaGrande.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width">
   <title>Pobreza en Puerto Rico</title>
-  <link href="S/SabanaGrande/SabanaGrande.css" rel="stylesheet" type="text/css" />
+  <link href="SabanaGrande.css" rel="stylesheet" type="text/css" />
 </head>
 <body>
 <div class="Titulo">
