--- a/S/SanGerman/SanGerman.html
+++ b/S/SanGerman/SanGerman.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width">
   <title>Pobreza en Puerto Rico</title>
-  <link href="S/SanGermán/SanGermám.css" rel="stylesheet" type="text/css" />
+  <link href="SanGerman.css" rel="stylesheet" type="text/css" />
 </head>
 <body>
 <div class="Titulo">
