--- a/S/SanJuan/SanJuan.html
+++ b/S/SanJuan/SanJuan.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width">
   <title>Pobreza en Puerto Rico</title>
-  <link href="S/SanJuan/SanJuan.css" rel="stylesheet" type="text/css" />
+  <link href="SanJuan.css" rel="stylesheet" type="text/css" />
 </head>
 <body>
 <div class="Titulo">
