--- a/S/SanLorenzo/SanLorenzo.html
+++ b/S/SanLorenzo/SanLorenzo.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width">
   <title>Pobreza en Puerto Rico</title>
-  <link href="S/SanLorenzo/SanLorenzo.css" rel="stylesheet" type="text/css" />
+  <link href="SanLorenzo.css" rel="stylesheet" type="text/css" />
 </head>
 <body>
 <div class="Titulo">
