--- a/V/Villalba/Villalba.html
+++ b/V/Villalba/Villalba.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width">
   <title>Pobreza en Puerto Rico</title>
-  <link href="V/Villalba/Villalba.css" rel="stylesheet" type="text/css" />
+  <link href="Villalba.css" rel="stylesheet" type="text/css" />
 </head>
 <body>
 <div class="Titulo">
