--- a/Y/Yauco/Yauco.html
+++ b/Y/Yauco/Yauco.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width">
   <title>Pobreza en Puerto Rico</title>
-  <link href="Y/Yauco/Yauco.css" rel="stylesheet" type="text/css" />
+  <link href="Yauco.css" rel="stylesheet" type="text/css" />
 </head>
 <body>
 <div class="Titulo">
