--- a/A/Adjuntas/Adjuntas.html
+++ b/A/Adjuntas/Adjuntas.html
@@ -14,7 +14,7 @@
   <div class="LugaresTuristicos">
   <ul class="ListaLugaresTuristicos">
   <li><h2>Hacienda Tres Angeles</h2></li>
-  <img src="Hacieda_Tres_Ángeles_Café_Puerto_Rico_Naturaleza.jpg" width= "80%" height= "30%">
+  <img src="Hacieda_Tres_Angeles_Cafe_Puerto_Rico_Naturaleza.jpg" width= "80%" height= "30%">
     <p class="HTA">
       La Hacienda Tres Ángeles es la primera finca agro-turística certificada por la Compañía de Turismo de Puerto Rico.
       <br>Están  ubicados en la ciudad de Adjuntas, Puerto Rico mejor conocida como la tierra de El Gigante Dormido. 
