--- a/A/Aguada/Aguada.html
+++ b/A/Aguada/Aguada.html
@@ -49,7 +49,7 @@ Aguada, PR, 00602</a></li>
       </ul>
     </p>
   <h2>Centro de Bellas Artes </h2>
-    <img src="Unknown.jpeg" height="30%" width="80%">
+    <img src="1.jpeg" height="30%" width="80%">
    <p class="text">
       <br>El Centro de Bellas Artes fue inagurado en el año 2000 y desde ese entonces el centro ha sido un lugar en donde se realizan obras teatrales y músicales. El teatro sufrió grandes daños debido al Huracán María y el municipio esta trabajando arduosamente para su rehabilitación, sin embargo, sirve como un local para exibiciones de artes plásticas.
    </p>
