--- a/M/Maricao/Maricao.html
+++ b/M/Maricao/Maricao.html
@@ -12,7 +12,7 @@
   <h2>Lugares turísticos en Maricao</h2>
 </div>
   <div class="Lugares">
-    <h2></h2>
+    <h2>Gruta de San Juan Bautista</h2>
     <img src="" width="80%" height="30%">
     <p class="text">
     </p>
