--- a/M/Maricao/Maricao.html
+++ b/M/Maricao/Maricao.html
@@ -15,15 +15,18 @@
     <h2>Gruta de San Juan Bautista</h2>
     <img src="" width="80%" height="30%">
     <p class="text">
+      La Gruta de San Juan Bautista es un monumento ubicado en la carretera 410, km 02 en Maricao. El mismo hace homenaje al momento cuando Jesús le pide a su primo Juan, en la orilla del Río Jordán, que lo bautice.
     </p>
     <p>
+      Pueden visitar la Gruta de San Juan Bautista en:
       <ul>
         <li>Dirección: <a href=""></a></li>
       </ul>
     </p>
-    <h2></h2>
+    <h2>Salto Curet</h2>
     <img src="" width="80%" height="30%">
     <p class="text">
+      Salto Curet es una cascada fuera de lo común en la ciudad de Maricao. Para llegar al área de la cascada, tendrás que hacer una caminata río arriba.
     </p>
     Pueden visitar en:
     <p>
@@ -31,9 +34,10 @@
         <li>Dirección: <a href=""></a></li>
       </ul>
     </p>
-    <h2></h2>
+    <h2>Parque Ecológico Monte del Estado</h2>
     <img src="" width="80%" height="30%">
     <p class="text">
+      El Parque Ecológico Monte del Estado se encuentra en el Bosque Estatal de Maricao, Puerto Rico. El parque cuenta con miradores en los que disfrutas de hermosas vistas panorámicas en los que puedes avistar la costa de la Isla. Puedes caminar por sus veredas y apreciar su abundante vegetación además de una gran variedad de aves.
     </p>
     <p>
       Pueden visitar en:
@@ -41,9 +45,10 @@
         <li>Dirección: <a href=""></a></li>
       </ul>
     </p>
-    <h2></h2>
+    <h2>Bosque Estatal De Maricao</h2>
     <img src="" width="80%" height="30%">
     <p class="text">
+      El Bosque estatal de Maricao, generalmente conocido simplemente como "Monte del Estado", por la cual se refiere a la montaña de este nombre que se localiza en el bosque, se ubica en la isla de Puerto Rico, delimitado por las poblaciones de San Germán, Sabana Grande y Maricao.
     </p>
     <p>
       Pueden visitar en:
