--- a/M/Maricao/Maricao.html
+++ b/M/Maricao/Maricao.html
@@ -46,7 +46,7 @@
       </ul>
     </p>
     <h2>Bosque Estatal De Maricao</h2>
-    <img src="" width="80%" height="30%">
+    <img src="Bosque.jpeg" width="80%" height="30%">
     <p class="text">
       El Bosque estatal de Maricao, generalmente conocido simplemente como "Monte del Estado", por la cual se refiere a la montaña de este nombre que se localiza en el bosque, se ubica en la isla de Puerto Rico, delimitado por las poblaciones de San Germán, Sabana Grande y Maricao.
     </p>
