--- a/M/Maricao/Maricao.html
+++ b/M/Maricao/Maricao.html
@@ -35,7 +35,7 @@
       </ul>
     </p>
     <h2>Parque Ecológico Monte del Estado</h2>
-    <img src="" width="80%" height="30%">
+    <img src="IMG_5070.jpg.webp" width="80%" height="30%">
     <p class="text">
       El Parque Ecológico Monte del Estado se encuentra en el Bosque Estatal de Maricao, Puerto Rico. El parque cuenta con miradores en los que disfrutas de hermosas vistas panorámicas en los que puedes avistar la costa de la Isla. Puedes caminar por sus veredas y apreciar su abundante vegetación además de una gran variedad de aves.
     </p>
