--- a/M/Maricao/Maricao.html
+++ b/M/Maricao/Maricao.html
@@ -13,7 +13,7 @@
 </div>
   <div class="Lugares">
     <h2>Gruta de San Juan Bautista</h2>
-    <img src="" width="80%" height="30%">
+    <img src="img_3685.jpg-2.webp" width="80%" height="30%">
     <p class="text">
       La Gruta de San Juan Bautista es un monumento ubicado en la carretera 410, km 02 en Maricao. El mismo hace homenaje al momento cuando Jesús le pide a su primo Juan, en la orilla del Río Jordán, que lo bautice.
     </p>
