--- a/M/Maricao/Maricao.html
+++ b/M/Maricao/Maricao.html
@@ -20,18 +20,18 @@
     <p>
       Pueden visitar la Gruta de San Juan Bautista en:
       <ul>
-        <li>Dirección: <a href=""></a></li>
+        <li>Dirección: <a href="https://goo.gl/maps/fGt7yWfLXh36g5kEA">52H9+JP8, Cll Celis Aguilera, Maricao 00637</a></li>
       </ul>
     </p>
     <h2>Salto Curet</h2>
-    <img src="" width="80%" height="30%">
+    <img src="photo9jpg.jpeg" width="80%" height="30%">
     <p class="text">
       Salto Curet es una cascada fuera de lo común en la ciudad de Maricao. Para llegar al área de la cascada, tendrás que hacer una caminata río arriba.
     </p>
     Pueden visitar en:
     <p>
       <ul>
-        <li>Dirección: <a href=""></a></li>
+        <li>Dirección: <a href="https://goo.gl/maps/gripRJacuE4hE4jUA">527V+GWV, PR-425, Maricao, 00606</a></li>
       </ul>
     </p>
     <h2>Parque Ecológico Monte del Estado</h2>
@@ -42,7 +42,7 @@
     <p>
       Pueden visitar en:
       <ul>
-        <li>Dirección: <a href=""></a></li>
+        <li>Dirección: <a href="https://goo.gl/maps/2sKVCqVPVG5Y8fDB9">Bosque Estatal De Maricao, Km 16.2, PR-120, 00606</a></li>
       </ul>
     </p>
     <h2>Bosque Estatal De Maricao</h2>
@@ -53,26 +53,25 @@
     <p>
       Pueden visitar en:
       <ul>
-        <li>Dirección: <a href=""></a></li>
+        <li>Dirección: <a href="https://goo.gl/maps/8b2idUHjUujCB6Up9">Km 16.2 PR-120, Maricao, 00606</a></li>
       </ul>
     </p>
   </div>
   <h2>Restaurantes</h2>
   <div class="Restaurantes">
   <ul>
-    <li></li>
-    <li></li>
-    <li></li>
-    <li></li>
-    <li></li>
+    <li>Lee Mary's Pizza (787)-838-4510</li>
+    <li>El Rincón de Los Recuerdos (787)-217-8572</li>
+    <li>Maricao fried chicken (787)-838-2085</li>
+    <li>El Rincón de Diego (787)-377-9446</li>
+    <li>El Buen Cafe (787)-838-4198</li>
   </ul>
   </div>
   <h2>Eventos</h2>
   <div class="Eventos">
      <ul>
-    <li></li>
-    <li></li>
-    <li></li>
+    <li>Fiesta de la Cosecha del Café - Febrero</li>
+    <li>Fiestas Patronales de San Juan Bautista - Junio</li>
   </ul>
   </div>
 </body>
