--- a/M/Maunabo/Maunabo.html
+++ b/M/Maunabo/Maunabo.html
@@ -12,7 +12,7 @@
   <h2>Lugares turísticos en </h2>
 </div>
   <div class="Lugares">
-    <h2></h2>
+    <h2>Casa Verde Reserva Natural Humedal Punta Tuna</h2>
     <img src="" width="80%" height="30%">
     <p class="text">
     </p>
@@ -21,7 +21,7 @@
         <li>Dirección: <a href=""></a></li>
       </ul>
     </p>
-    <h2></h2>
+    <h2>Playa Los Bohíos</h2>
     <img src="" width="80%" height="30%">
     <p class="text">
     </p>
@@ -31,7 +31,7 @@
         <li>Dirección: <a href=""></a></li>
       </ul>
     </p>
-    <h2></h2>
+    <h2>Area Natural Protegida Sierra la Pandura</h2>
     <img src="" width="80%" height="30%">
     <p class="text">
     </p>
@@ -41,7 +41,7 @@
         <li>Dirección: <a href=""></a></li>
       </ul>
     </p>
-    <h2></h2>
+    <h2>Parque Pasivo de Maunabo</h2>
     <img src="" width="80%" height="30%">
     <p class="text">
     </p>
