--- a/M/Maunabo/Maunabo.html
+++ b/M/Maunabo/Maunabo.html
@@ -12,43 +12,53 @@
   <h2>Lugares turísticos en </h2>
 </div>
   <div class="Lugares">
-    <h2>Casa Verde Reserva Natural Humedal Punta Tuna</h2>
+    <h2>Reserva Natural Humedal Punta Tuna</h2>
     <img src="" width="80%" height="30%">
     <p class="text">
+      Esta reserva natural se encuentra cerca del distintivo Faro Punta Tuna de Maunabo. Compuesta principalmente por humedales, la reserva de Punta Tuna cubre 1,4 millas de costa. En la reserva, encontrarás un pequeño centro de visitantes y múltiples senderos. Se pueden concertar visitas guiadas con antelación.
     </p>
     <p>
       <ul>
-        <li>Dirección: <a href=""></a></li>
+        <li>Dirección: <a href="https://goo.gl/maps/fxJzqM1bNjmGKzgt7">Km 4.2, PR-7760, Maunabo, 00707</a></li>
       </ul>
     </p>
     <h2>Playa Los Bohíos</h2>
     <img src="" width="80%" height="30%">
     <p class="text">
+      La playa es un encuentro íntimo con la flora y la fauna de Puerto Rico, ya que en Maunabo se encuentra gran cantidad de la biodeiversidad de nuestra isla.
+<br>
+<br>
+Playa Los Bohíos es una playa muy popular atrayendo miles de visitantes y turistas cada año que desean y buscan explorar otras regiones más allá de San Juan y otras ciudades importantes.
     </p>
     Pueden visitar en:
     <p>
       <ul>
-        <li>Dirección: <a href=""></a></li>
+        <li>Dirección: <a href="https://goo.gl/maps/77NVYkP7D4WSNfCH7">X4R4+HF3, Desembocadura Río Maunabo, Sector Los Bohíos, Emajagua</a></li>
       </ul>
     </p>
     <h2>Area Natural Protegida Sierra la Pandura</h2>
     <img src="" width="80%" height="30%">
     <p class="text">
+      Esta área natural protegida abarca unas 179 cuerdas de la sierra que le da su nombre, 
+      también conocida como la Cuchilla de Pandura o La Pica, en los municipios costeros de Maunabo y Yabucoa. 
+      Este grupo de montañas baja desde la Sierra de Cayey y su origen volcánico se remonta a inyecciones de magma del interior 
+      de la corteza terrestre de unos 90 millones de años de antigüedad.
     </p>
     <p>
       Pueden visitar en:
       <ul>
-        <li>Dirección: <a href=""></a></li>
+        <li>Dirección: <a href="https://goo.gl/maps/7xzmBQzySz97VtD79">23J4+Q5W, PR-759, Maunabo 00707</a></li>
       </ul>
     </p>
-    <h2>Parque Pasivo de Maunabo</h2>
+    <h2>Plaza de Recreo de Maunabo</h2>
     <img src="" width="80%" height="30%">
     <p class="text">
+      Plaza de Recreo de Maunabo ha servido como refugio para todos los ciudadanos de este municipio por muchísimos años. Es un lugar hermoso y lleno de diversión.
     </p>
     <p>
       Pueden visitar en:
       <ul>
-        <li>Dirección: <a href=""></a></li>
+        <li>Dirección: <a href="https://goo.gl/maps/H2RzcU29YszwcNrt7">2433+24F, PR-760, Maunabo, 00707</a></li>
       </ul>
     </p>
   </div>
