--- a/M/Maunabo/Maunabo.html
+++ b/M/Maunabo/Maunabo.html
@@ -75,9 +75,13 @@ Playa Los Bohíos es una playa muy popular atrayendo miles de visitantes y turis
   <h2>Eventos</h2>
   <div class="Eventos">
      <ul>
-    <li></li>
-    <li></li>
-    <li></li>
+    <li>Feria de la Caña - Abril</li>
+    <li>Festival de Navidad - Diciembre</li>
+    <li>Festival Jueyero - Septiembre</li>
+    <li>Festival Palo Seco - Noviembre</li>
+    <li>Fiestas Patronales San Pedro y San Isidro Labrador - Junio</li>
+    <li>Maratón Año Viejo - Diciembre</li>
+    <li>Maratón Pablo Ramírez - Febrero</li>
   </ul>
   </div>
 </body>
