--- a/M/Maunabo/Maunabo.html
+++ b/M/Maunabo/Maunabo.html
@@ -23,7 +23,7 @@
       </ul>
     </p>
     <h2>Playa Los Bohíos</h2>
-    <img src="" width="80%" height="30%">
+    <img src="199184489_819103552048000_2435024205905081016_n.jpeg" width="80%" height="30%">
     <p class="text">
       La playa es un encuentro íntimo con la flora y la fauna de Puerto Rico, ya que en Maunabo se encuentra gran cantidad de la biodeiversidad de nuestra isla.
 <br>
