--- a/M/Maunabo/Maunabo.html
+++ b/M/Maunabo/Maunabo.html
@@ -37,7 +37,7 @@ Playa Los Bohíos es una playa muy popular atrayendo miles de visitantes y turis
       </ul>
     </p>
     <h2>Area Natural Protegida Sierra la Pandura</h2>
-    <img src="" width="80%" height="30%">
+    <img src="57267584_419882588570869_7044563839450349568_n.jpeg" width="80%" height="30%">
     <p class="text">
       Esta área natural protegida abarca unas 179 cuerdas de la sierra que le da su nombre, 
       también conocida como la Cuchilla de Pandura o La Pica, en los municipios costeros de Maunabo y Yabucoa. 
