--- a/M/Maunabo/Maunabo.html
+++ b/M/Maunabo/Maunabo.html
@@ -13,7 +13,7 @@
 </div>
   <div class="Lugares">
     <h2>Reserva Natural Humedal Punta Tuna</h2>
-    <img src="" width="80%" height="30%">
+    <img src="MAUNABO-Humedal Punta Tuna^DSC00215-BIG.jpeg" width="80%" height="30%">
     <p class="text">
       Esta reserva natural se encuentra cerca del distintivo Faro Punta Tuna de Maunabo. Compuesta principalmente por humedales, la reserva de Punta Tuna cubre 1,4 millas de costa. En la reserva, encontrarás un pequeño centro de visitantes y múltiples senderos. Se pueden concertar visitas guiadas con antelación.
     </p>
