--- a/M/Maunabo/Maunabo.html
+++ b/M/Maunabo/Maunabo.html
@@ -51,7 +51,7 @@ Playa Los Bohíos es una playa muy popular atrayendo miles de visitantes y turis
       </ul>
     </p>
     <h2>Plaza de Recreo de Maunabo</h2>
-    <img src="" width="80%" height="30%">
+    <img src="eb8204ca99ba3fcd2889bae3ce8048ee.jpeg" width="80%" height="30%">
     <p class="text">
       Plaza de Recreo de Maunabo ha servido como refugio para todos los ciudadanos de este municipio por muchísimos años. Es un lugar hermoso y lleno de diversión.
     </p>
@@ -65,11 +65,11 @@ Playa Los Bohíos es una playa muy popular atrayendo miles de visitantes y turis
   <h2>Restaurantes</h2>
   <div class="Restaurantes">
   <ul>
-    <li></li>
-    <li></li>
-    <li></li>
-    <li></li>
-    <li></li>
+    <li>Salmorejo Bar & Grill (787)-861-3030</li>
+    <li>Restaurante Rincón Familiar (787)-420-6244</li>
+    <li>Family Pizza (787)-861-4251</li>
+    <li>Sweet Mango Maunabo (939)-245-1805</li>
+    <li>El Comelón Maunabo (787)-466-9198</li>
   </ul>
   </div>
   <h2>Eventos</h2>
