--- a/M/Mayaguez/Mayaguez.html
+++ b/M/Mayaguez/Mayaguez.html
@@ -12,41 +12,52 @@
   <h2>Lugares turísticos en Mayagüez</h2>
 </div>
   <div class="Lugares">
-    <h2></h2>
+    <h2>Parque de los Próceres Puertorriqueños</h2>
     <img src="" width="80%" height="30%">
     <p class="text">
+      En 1977 el alcalde de Mayagüez, Don Benjamín Cole obtuvo una subvención de la Administración de Desarrollo Económico del Departamento de
+      Comercio de los Estados Unidos para la construcción del "Parque de los Próceres Puertorriqueños". El parque está ubicado a orillas del río 
+      Yagüez entre las carreteras PR-108 y PR-65. El nombre del parque en español significa "Parque de los Patriotas de Puerto Rico".
+      Está ubicado frente al Palacio de Recreación y Deportes.
     </p>
+    <p>
+      Pueden visitar el Parque de los Próceres Puertorriqueños en:
+      <ul>
+        <li>Dirección: <a href=""></a></li>
+      </ul>
+    </p>
+    <h2>Teatro Yagüez</h2>
+    <img src="" width="80%" height="30%">
+    <p class="text">
+      El Teatro Yagüez se localiza en la isla de Puerto Rico es un edificio histórico que hoy es un Teatro para presentaciones artísticas. 
+      Se encuentra en las calle Candelaria y las Dr. Basora, en la ciudad de Mayagüez. Consiste en la Sala Lucy Boscana y el 
+      Café-Teatro Roberto Cole.
+    </p>
+    Pueden visitar el Teatro Yagüez en:
     <p>
       <ul>
         <li>Dirección: <a href=""></a></li>
       </ul>
     </p>
-    <h2></h2>
+    <h2>Plaza Almirante Cristóbal Colón</h2>
     <img src="" width="80%" height="30%">
     <p class="text">
+      Plaza Colón es la plaza principal de la ciudad de Mayagüez, Puerto Rico. Esta plaza y su fuente conmemoran al explorador Cristóbal Colón.
     </p>
-    Pueden visitar en:
     <p>
+      Pueden visitar la Plaza Almirante Cristóbal Colón en:
       <ul>
         <li>Dirección: <a href=""></a></li>
       </ul>
     </p>
-    <h2></h2>
+    <h2>Catedral Nuestra Señora de la Candelaria</h2>
     <img src="" width="80%" height="30%">
     <p class="text">
+      La Catedral de Nuestra Señora de la Candelaria de Mayagüez es la catedral de la Diócesis de Mayagüez 
+      situada en el extremo oriental de la Plaza principal de Colón frente al ayuntamiento en Mayagüez, Puerto Rico.
     </p>
     <p>
-      Pueden visitar en:
-      <ul>
-        <li>Dirección: <a href=""></a></li>
-      </ul>
-    </p>
-    <h2></h2>
-    <img src="" width="80%" height="30%">
-    <p class="text">
-    </p>
-    <p>
-      Pueden visitar en:
+      Pueden visitar la Catedral Nuestra Señora de la Candelaria en:
       <ul>
         <li>Dirección: <a href=""></a></li>
       </ul>
@@ -65,9 +76,8 @@
   <h2>Eventos</h2>
   <div class="Eventos">
      <ul>
-    <li></li>
-    <li></li>
-    <li></li>
+    <li>Fiestas Patronales Virgen de la Candelaria - Febrero</li>
+    <li>Feria Cinco Días Con Nuestra Tierra - Marzo</li>
   </ul>
   </div>
 </body>
