--- a/M/Maricao/Maricao.html
+++ b/M/Maricao/Maricao.html
@@ -28,7 +28,7 @@
     <p class="text">
       Salto Curet es una cascada fuera de lo común en la ciudad de Maricao. Para llegar al área de la cascada, tendrás que hacer una caminata río arriba.
     </p>
-    Pueden visitar en:
+    Pueden visitar el Salto Curet en:
     <p>
       <ul>
         <li>Dirección: <a href="https://goo.gl/maps/gripRJacuE4hE4jUA">527V+GWV, PR-425, Maricao, 00606</a></li>
@@ -40,7 +40,7 @@
       El Parque Ecológico Monte del Estado se encuentra en el Bosque Estatal de Maricao, Puerto Rico. El parque cuenta con miradores en los que disfrutas de hermosas vistas panorámicas en los que puedes avistar la costa de la Isla. Puedes caminar por sus veredas y apreciar su abundante vegetación además de una gran variedad de aves.
     </p>
     <p>
-      Pueden visitar en:
+      Pueden visitar el Parque Ecológico Monte del Estado en:
       <ul>
         <li>Dirección: <a href="https://goo.gl/maps/2sKVCqVPVG5Y8fDB9">Bosque Estatal De Maricao, Km 16.2, PR-120, 00606</a></li>
       </ul>
@@ -51,7 +51,7 @@
       El Bosque estatal de Maricao, generalmente conocido simplemente como "Monte del Estado", por la cual se refiere a la montaña de este nombre que se localiza en el bosque, se ubica en la isla de Puerto Rico, delimitado por las poblaciones de San Germán, Sabana Grande y Maricao.
     </p>
     <p>
-      Pueden visitar en:
+      Pueden visitar el Bosque Estatal De Maricao en:
       <ul>
         <li>Dirección: <a href="https://goo.gl/maps/8b2idUHjUujCB6Up9">Km 16.2 PR-120, Maricao, 00606</a></li>
       </ul>
