--- a/M/Maunabo/Maunabo.html
+++ b/M/Maunabo/Maunabo.html
@@ -18,6 +18,7 @@
       Esta reserva natural se encuentra cerca del distintivo Faro Punta Tuna de Maunabo. Compuesta principalmente por humedales, la reserva de Punta Tuna cubre 1,4 millas de costa. En la reserva, encontrarás un pequeño centro de visitantes y múltiples senderos. Se pueden concertar visitas guiadas con antelación.
     </p>
     <p>
+      Pueden visitar la Reserva Natural Humedal Punta Tuna en:
       <ul>
         <li>Dirección: <a href="https://goo.gl/maps/fxJzqM1bNjmGKzgt7">Km 4.2, PR-7760, Maunabo, 00707</a></li>
       </ul>
@@ -30,13 +31,13 @@
 <br>
 Playa Los Bohíos es una playa muy popular atrayendo miles de visitantes y turistas cada año que desean y buscan explorar otras regiones más allá de San Juan y otras ciudades importantes.
     </p>
-    Pueden visitar en:
+    Pueden visitar la Playa Los Bohíos en:
     <p>
       <ul>
         <li>Dirección: <a href="https://goo.gl/maps/77NVYkP7D4WSNfCH7">X4R4+HF3, Desembocadura Río Maunabo, Sector Los Bohíos, Emajagua</a></li>
       </ul>
     </p>
-    <h2>Area Natural Protegida Sierra la Pandura</h2>
+    <h2>Área Natural Protegida Sierra la Pandura</h2>
     <img src="57267584_419882588570869_7044563839450349568_n.jpeg" width="80%" height="30%">
     <p class="text">
       Esta área natural protegida abarca unas 179 cuerdas de la sierra que le da su nombre, 
@@ -45,7 +46,7 @@ Playa Los Bohíos es una playa muy popular atrayendo miles de visitantes y turis
       de la corteza terrestre de unos 90 millones de años de antigüedad.
     </p>
     <p>
-      Pueden visitar en:
+      Pueden visitar el Área Natural Protegida Sierra la Pandura en:
       <ul>
         <li>Dirección: <a href="https://goo.gl/maps/7xzmBQzySz97VtD79">23J4+Q5W, PR-759, Maunabo 00707</a></li>
       </ul>
@@ -56,7 +57,7 @@ Playa Los Bohíos es una playa muy popular atrayendo miles de visitantes y turis
       Plaza de Recreo de Maunabo ha servido como refugio para todos los ciudadanos de este municipio por muchísimos años. Es un lugar hermoso y lleno de diversión.
     </p>
     <p>
-      Pueden visitar en:
+      Pueden visitar la Plaza de Recreo de Maunabo en:
       <ul>
         <li>Dirección: <a href="https://goo.gl/maps/H2RzcU29YszwcNrt7">2433+24F, PR-760, Maunabo, 00707</a></li>
       </ul>
