--- a/M/Mayaguez/Mayaguez.html
+++ b/M/Mayaguez/Mayaguez.html
@@ -27,7 +27,7 @@
       </ul>
     </p>
     <h2>Teatro Yagüez</h2>
-    <img src="" width="80%" height="30%">
+    <img src="191-3-12962_jpeg0-486c65a05056a36_486c68fd-5056-a36a-0810ed8b1a7ba14a.jpeg" width="80%" height="30%">
     <p class="text">
       El Teatro Yagüez se localiza en la isla de Puerto Rico es un edificio histórico que hoy es un Teatro para presentaciones artísticas. 
       Se encuentra en las calle Candelaria y las Dr. Basora, en la ciudad de Mayagüez. Consiste en la Sala Lucy Boscana y el 
