--- a/M/Mayaguez/Mayaguez.html
+++ b/M/Mayaguez/Mayaguez.html
@@ -13,7 +13,7 @@
 </div>
   <div class="Lugares">
     <h2>Parque de los Próceres Puertorriqueños</h2>
-    <img src="" width="80%" height="30%">
+    <img src="Parque-de-los-Pr-ceres-1_57713115-5056-A36A-089E4CD5FD59EFE3-57712f265056a36_57713190-5056-a36a-08dc544170aec2bd.jpeg" width="80%" height="30%">
     <p class="text">
       En 1977 el alcalde de Mayagüez, Don Benjamín Cole obtuvo una subvención de la Administración de Desarrollo Económico del Departamento de
       Comercio de los Estados Unidos para la construcción del "Parque de los Próceres Puertorriqueños". El parque está ubicado a orillas del río 
