--- a/M/Mayaguez/Mayaguez.html
+++ b/M/Mayaguez/Mayaguez.html
@@ -40,7 +40,7 @@
       </ul>
     </p>
     <h2>Plaza Almirante Cristóbal Colón</h2>
-    <img src="" width="80%" height="30%">
+    <img src="plaza-colon.jpeg" width="80%" height="30%">
     <p class="text">
       Plaza Colón es la plaza principal de la ciudad de Mayagüez, Puerto Rico. Esta plaza y su fuente conmemoran al explorador Cristóbal Colón.
     </p>
