--- a/M/Mayaguez/Mayaguez.html
+++ b/M/Mayaguez/Mayaguez.html
@@ -23,7 +23,7 @@
     <p>
       Pueden visitar el Parque de los Próceres Puertorriqueños en:
       <ul>
-        <li>Dirección: <a href=""></a></li>
+        <li>Dirección: <a href="https://goo.gl/maps/LNdnfZoYaz7EjdsU8">252 Calle Dr. Raymon E Betances, Mayagüez, 00680</a></li>
       </ul>
     </p>
     <h2>Teatro Yagüez</h2>
@@ -36,7 +36,7 @@
     Pueden visitar el Teatro Yagüez en:
     <p>
       <ul>
-        <li>Dirección: <a href=""></a></li>
+        <li>Dirección: <a href="https://goo.gl/maps/Tq2qWAPMosuxLBBK7">2-98 C. Eduardo Riera, Mayagüez, 00682</a></li>
       </ul>
     </p>
     <h2>Plaza Almirante Cristóbal Colón</h2>
@@ -47,11 +47,11 @@
     <p>
       Pueden visitar la Plaza Almirante Cristóbal Colón en:
       <ul>
-        <li>Dirección: <a href=""></a></li>
+        <li>Dirección: <a href="https://goo.gl/maps/NovtyoCASz5yqJcA7">Mayagüez, 00680</a></li>
       </ul>
     </p>
     <h2>Catedral Nuestra Señora de la Candelaria</h2>
-    <img src="" width="80%" height="30%">
+    <img src="the-cathedral-of-our.jpeg" width="80%" height="30%">
     <p class="text">
       La Catedral de Nuestra Señora de la Candelaria de Mayagüez es la catedral de la Diócesis de Mayagüez 
       situada en el extremo oriental de la Plaza principal de Colón frente al ayuntamiento en Mayagüez, Puerto Rico.
@@ -59,18 +59,18 @@
     <p>
       Pueden visitar la Catedral Nuestra Señora de la Candelaria en:
       <ul>
-        <li>Dirección: <a href=""></a></li>
+        <li>Dirección: <a href="https://goo.gl/maps/j1ugGk2h2tT2pejy8">55 Calle Iglesia, Mayagüez, 00680</a></li>
       </ul>
     </p>
   </div>
   <h2>Restaurantes</h2>
   <div class="Restaurantes">
   <ul>
-    <li></li>
-    <li></li>
-    <li></li>
-    <li></li>
-    <li></li>
+    <li>Casa Mía Restaurant (787)-806-2469</li>
+    <li>Gonzalez's Sea Food Restaurant (787)-265-7497</li>
+    <li>Casa Leña (787)-804-3333</li>
+    <li>Restaurante y Pizzería Don Quijote (787)-265-1045</li>
+    <li>Bubble Tea Yum (787)-827-8796</li>
   </ul>
   </div>
   <h2>Eventos</h2>
