--- a/M/Moca/Moca.html
+++ b/M/Moca/Moca.html
@@ -12,18 +12,26 @@
   <h2>Lugares turísticos en Moca</h2>
 </div>
   <div class="Lugares">
-    <h2></h2>
+    <h2>Mirador de Moca</h2>
     <img src="" width="80%" height="30%">
     <p class="text">
+      Mirador de Moca es un mirador en Moca, Puerto Rico.
+Desde aquí arriba, tendrá una gran vista de Moca y sus alrededores.
+Asegúrate de traer tu cámara para capturar la increíble vista.
+Mirador de Moca es un gran lugar para cambiar tu perspectiva y explorar el mundo desde un ángulo diferente.
     </p>
     <p>
       <ul>
         <li>Dirección: <a href=""></a></li>
       </ul>
     </p>
-    <h2></h2>
+    <h2>Museo del Mundillo</h2>
     <img src="" width="80%" height="30%">
     <p class="text">
+      Mundillo es una forma artesanal de encaje de bolillos hecho a mano que es 
+      específicamente importante para la historia de un pueblo en particular en Puerto Rico: Moca.
+      Este museo honra y continúa el legado del pueblo, a través de la conservación de piezas únicas de 
+      mundillo, así como ofreciendo talleres de mundillo a grupos de todas las edades.
     </p>
     Pueden visitar en:
     <p>
@@ -34,6 +42,10 @@
     <h2></h2>
     <img src="" width="80%" height="30%">
     <p class="text">
+      Hacienda Labadie, los planes para construir este hito histórico diseñado por el arquitecto francés 
+      Paul Servajean datan de finales del siglo XIX, pero la construcción no se terminó hasta 1905. Originalmente, 
+      los 1,262 acres de tierra de la hacienda se usaban para el cultivo de café, sin embargo , después de la guerra 
+      hispano-estadounidense, se hizo un cambio al policía de choque a pedido de la época: la caña de azúcar.
     </p>
     <p>
       Pueden visitar en:
@@ -41,9 +53,15 @@
         <li>Dirección: <a href=""></a></li>
       </ul>
     </p>
-    <h2></h2>
+    <h2>Bandera de Columpios</h2>
     <img src="" width="80%" height="30%">
     <p class="text">
+      La prueba de esto se observa con frecuencia en las redes sociales que cada vez se invaden más por 
+      imágenes de gente de todas las edades que acude a alguno de los columpios rústicos que han ido ubicando en distintos puntos de la Isla.
+
+Se puede establecer que hay una fiebre por visitar estos columpios, al
+      igual que está ocurriendo con el amor que se ha despertado por la bandera 
+      nuestra por iniciativas como la llamada “78 pueblos, una bandera”, del joven Héctor Collazo.
     </p>
     <p>
       Pueden visitar en:
