--- a/M/Moca/Moca.html
+++ b/M/Moca/Moca.html
@@ -54,7 +54,7 @@ Mirador de Moca es un gran lugar para cambiar tu perspectiva y explorar el mundo
       </ul>
     </p>
     <h2>Bandera de Columpios</h2>
-    <img src="" width="80%" height="30%">
+    <img src="36423291_2239534716270602_1264468604217196544_n.jpeg" width="80%" height="30%">
     <p class="text">
       La prueba de esto se observa con frecuencia en las redes sociales que cada vez se invaden más por 
       imágenes de gente de todas las edades que acude a alguno de los columpios rústicos que han ido ubicando en distintos puntos de la Isla.
