--- a/M/Moca/Moca.html
+++ b/M/Moca/Moca.html
@@ -26,7 +26,7 @@ Mirador de Moca es un gran lugar para cambiar tu perspectiva y explorar el mundo
       </ul>
     </p>
     <h2>Museo del Mundillo</h2>
-    <img src="" width="80%" height="30%">
+    <img src="Museo-del-Mundillo-2_153CA02E-5056-A36A-08A67CEC4727AE9A-153c9f465056a36_153ca082-5056-a36a-088b6288b8349fb2.jpeg" width="80%" height="30%">
     <p class="text">
       Mundillo es una forma artesanal de encaje de bolillos hecho a mano que es 
       específicamente importante para la historia de un pueblo en particular en Puerto Rico: Moca.
