--- a/M/Moca/Moca.html
+++ b/M/Moca/Moca.html
@@ -39,8 +39,8 @@ Mirador de Moca es un gran lugar para cambiar tu perspectiva y explorar el mundo
         <li>Dirección: <a href=""></a></li>
       </ul>
     </p>
-    <h2></h2>
-    <img src="" width="80%" height="30%">
+    <h2>Hacienda Labadie</h2>
+    <img src="palacete-de-los-moreau.jpeg" width="80%" height="30%">
     <p class="text">
       Hacienda Labadie, los planes para construir este hito histórico diseñado por el arquitecto francés 
       Paul Servajean datan de finales del siglo XIX, pero la construcción no se terminó hasta 1905. Originalmente, 
