--- a/M/Moca/Moca.html
+++ b/M/Moca/Moca.html
@@ -13,7 +13,7 @@
 </div>
   <div class="Lugares">
     <h2>Mirador de Moca</h2>
-    <img src="" width="80%" height="30%">
+    <img src="tesoro-entre-montanas-de-espaillat-y-de-moca.jpeg" width="80%" height="30%">
     <p class="text">
       Mirador de Moca es un mirador en Moca, Puerto Rico.
 Desde aquí arriba, tendrá una gran vista de Moca y sus alrededores.
